# A-

./: .gitignore  README.md  pyproject.toml  report_backtest.py
.github/workflows/: daily-email-backup.yml  daily-select.yml
data/: mainboard_stock_pool.csv
deploy/: com.stockselector.a-share-daily.plist
docs/: core-trading-rules.md  design.md
history/: performance_summary.csv  selection_history.csv
reports/: backtest-report.md  baostock-top10-2026-06-23.csv  data-source-status.txt  mainboard-cache-2026-06-23.csv  mainboard-cache-2026-06-24.csv  realtime-scan-2026-06-24.md  realtime-scan-2026-06-25.md  realtime-scan-2026-06-29.md  realtime-scan-2026-06-30.md  realtime-scan-2026-07-01.md  realtime-top10-2026-06-24.csv  realtime-top10-2026-06-25.csv  realtime-top10-2026-06-29.csv  realtime-top10-2026-06-30.csv  realtime-top10-2026-07-01.csv  repeat-watch-pool.csv  today_stock.md
scripts/: build_cached_report.py  build_email_test_report.py  build_fallback_report.py  check_trading_day.py  ci_publish_daily_data.sh  ci_restore_daily_data.sh  refresh_mainboard_cache.py  run_daily_select.py  run_realtime_select.py  run_scheduled_select.sh  send_daily_email.py
stock_selector/: __init__.py  akshare_engine.py  cli.py  config.py  daily_select.py  email_notify.py  history_validation.py  market_style.py
stock_selector/data/: __init__.py  akshare.py  akshare_mock.py  baostock.py  realtime.py  tushare.py
tests/: test_akshare_engine.py  test_daily_select.py  test_email_notify.py  test_history_validation.py
